--- a/config/tmux/.config/tmux/tmux.conf
+++ b/config/tmux/.config/tmux/tmux.conf
@@ -1,5 +1,5 @@
 set -ga terminal-overrides "xterm*:smcup@:rmcup@,xterm*:Tc,xterm*:RGB,alacritty*:Tc,alacritty*:RGB"
-set -g history-limit 20000
+set -g history-limit 100000
 set -g renumber-windows on
 set -g visual-activity off
 set -g base-index 1
@@ -10,7 +10,6 @@ set -g display-panes-time 1500
 setw -g mouse on
 set -sg escape-time 0
 set -wg monitor-activity off
-set -wg aggressive-resize on
 set -wg pane-base-index 1
 set -wg automatic-rename on
 set -wg mode-keys vi
@@ -45,14 +44,14 @@ if-shell -b '[ "$(echo "$tmux_version >= 3.0" | bc)" = 1 ]' \
 if-shell "test \$TERM = \'linux\'" "set -g default-terminal \'screen.linux\'" \
     "set -g default-terminal \'tmux-256color\'"
 
-if-shell "test \$TERM != \'linux\'" {
+if-shell "test \$TERM != \'linux\' && $(uname) != 'Darwin'" {
     bind-key -T copy-mode-vi WheelUpPane send-keys -X halfpage-up
     bind-key -T copy-mode-vi WheelDownPane send-keys -X halfpage-down
-    bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel \'xsel -i --clipboard\'
-    bind-key -T copy-mode-vi "MouseDragEnd1Pane" send-keys -X copy-pipe-and-cancel \'xsel -i --clipboard\'
+    bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel 'xsel -i --clipboard'
+    bind-key -T copy-mode-vi "MouseDragEnd1Pane" send-keys -X copy-pipe-and-cancel 'xsel -i --clipboard'
 } {
-    bind -T copy-mode-vi \'y\' send-keys -X copy-pipe-and-cancel \'reattach-to-user-namespace pbcopy\'
-    bind -T copy-mode-vi \'MouseDragEnd1Pane\' send-keys -X copy-pipe-and-cancel \'reattach-to-user-namespace pbcopy\'
+    bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+    bind -T copy-mode-vi 'MouseDragEnd1Pane' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
 }
 
 ## colours
