--- a/config/tmux/.config/tmux/tmux.conf
+++ b/config/tmux/.config/tmux/tmux.conf
@@ -70,7 +70,7 @@ if-shell 'test "$(uname)" = "Darwin"' \
 
 # Right side of status bar
 if-shell 'test "$(uname)" = "Darwin"' \
-    'set -g status-right "%H:%M %a %d-%b-%y "' \
+    'set -g status-right "%y-%m-%d %H:%M"' \
     'set -g status-right "#(cat ~/.thyme-tmux) %H:%M %d-%b-%y "'
 
 # Window status
