tmux status fixes

--- a/config/tmux/.config/tmux/tmux.conf
+++ b/config/tmux/.config/tmux/tmux.conf
@@ -23,6 +23,7 @@ bind-key v split-window -h -c '#{pane_current_path}'
 bind-key s split-window -v -c '#{pane_current_path}'
 bind-key C new-session
 bind-key S switch-client -l
+bind-key r source-file ~/.config/tmux/tmux.conf \; display "Config Reloaded!"
 bind-key -r H resize-pane -L 10
 bind-key -r J resize-pane -D 10
 bind-key -r K resize-pane -U 10
@@ -69,9 +70,7 @@ if-shell 'test "$(uname)" = "Darwin"' \
     'set -g status-left "#[fg=$colour_fg,bg=$colour_bg] #P |"'
 
 # Right side of status bar
-if-shell 'test "$(uname)" = "Darwin"' \
-    'set -g status-right "%y-%m-%d %H:%M"' \
-    'set -g status-right "#(cat ~/.thyme-tmux) %H:%M %d-%b-%y "'
+set -g status-right "%y-%m-%d %H:%M"
 
 # Window status
 set -g status-justify left
