--- a/config/tmux/.config/tmux/tmux.conf
+++ b/config/tmux/.config/tmux/tmux.conf
@@ -51,8 +51,8 @@ if-shell "test \$TERM != \'linux\' && $(uname) != 'Darwin'" {
     bind-key -T copy-mode-vi "y" send-keys -X copy-pipe-and-cancel 'xsel -i --clipboard'
     bind-key -T copy-mode-vi "MouseDragEnd1Pane" send-keys -X copy-pipe-and-cancel 'xsel -i --clipboard'
 } {
-    bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
-    bind -T copy-mode-vi 'MouseDragEnd1Pane' send-keys -X copy-pipe-and-cancel 'reattach-to-user-namespace pbcopy'
+    bind -T copy-mode-vi 'y' send-keys -X copy-pipe-and-cancel 'pbcopy'
+    bind -T copy-mode-vi 'MouseDragEnd1Pane' send-keys -X copy-pipe-and-cancel 'pbcopy'
 }
 
 ## colours
